removed the overflow and fixed fn removed the overflow from the drawer fixed the fn due to implementation of module pattern

--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,8 @@
 }
 .stored-nums-container {
   margin-top: 0.5rem;
-  max-height: 75%;
+
+  max-height: 72%;
   overflow: hidden;
   overflow-y: scroll;
 }
